Addeed and updated tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,16 +1,12 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = 
-    --strict-markers
-    --strict-config
     --verbose
     --tb=short
-    --cov=src
-    --cov-report=term-missing
-    --cov-report=html:htmlcov
+    --disable-warnings
 markers =
     unit: Unit tests
     integration: Integration tests
@@ -20,5 +16,6 @@ markers =
     requires_template: Tests that require template files
     requires_pptx: Tests that require PowerPoint files
 filterwarnings =
+    ignore::pytest.PytestUnknownMarkWarning
     ignore::UserWarning
     ignore::DeprecationWarning
