--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,7 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestArgs": [
         "tests",
-        "--verbose",
-        "--tb=short"
+        "--disable-warnings"
     ],
     "python.testing.autoTestDiscoverOnSaveEnabled": true,
     
