--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,9 @@ format = [
     "black>=22.0.0",
 ]
 dev = [
-    "deckbuilder[test,lint,format]",
-    "tomli>=2.0.1"
+  "deckbuilder[test,lint,format]",
+  "tomli>=2.0.1",
+  "black[jupyter]>=24.4.0"
 ]
 
 [project.urls]
